[project]
name = "mcp_youtube"
version = "0.1.0"
description = "MCP server for accessing YouTube data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "click<8.2.0",
    "typer>=0.9.0",
    "youtube-transcript-api>=1.0.3",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.1.0"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.8.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
]

[project.scripts]
mcp-youtube = "mcp_youtube.server:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py311"]
line-length = 88
